<resources>
    <string name="app_name">HelpTech</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recupera_pass">Recuperar contraseña</string>
    <string name="recupera_pass_title">Recuperar contraseña</string>
    <string name="info1_recupera_pass" />
    <string name="subtitle_recupera_pass">¿Has olvidado tu contraseña?</string>
    <string name="info2_recupera_pass">Introduce el correo electrónico asociado a tu cuenta para restablecer la contraseña.</string>
    <string name="email_placeHolder">Correo electrónico</string>
    <string name="btn_enviar">Enviar</string>
    <string name="email_enviar">Enviar</string>
    <string name="subtitle_recupera_passw">¿Has olvidado la contraseña?</string>
    <string name="registro">Registro</string>
    <string name="cuenta">Cuenta</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="pass">Contraseña</string>
    <string name="email">E-mail</string>
    <string name="privacidad">Privacidad</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="config">Configuración</string>
    <string name="mensajes">Mensajes</string>
    <string name="recientes">Recientes</string>
    <string name="user">User</string>
    <string name="ejemplo_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="ejemplo_hora">10:30</string>
    <string name="detalle_pregunta">Detalle pregunta</string>
    <string name="ejemplo_detalle">How do I compare strings in C?</string>
    <string name="respuestas"> Respuestas</string>
    <string name="num_ejemplo">128</string>
    <string name="lenguaje_c">C</string>
    <string name="ejemplo_votos">128 votos</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="inicio_sesion">Sign In</string>
    <string name="registrarse">Sign Up</string>
    <string name="btn_registro">Sign Up</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="txtNotificacion">Tu notificacion</string>
    <string name="todo">TODO</string>
    <string name="explora">Explora</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="help_tech">Help Tech</string>
    <string name="olvidar_pass">Olvidaste tu contraseña ?</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="elegir_preferencias">Selecciona tus temas de interés</string>
    <string name="itemJavatxt">Java</string>
    <string name="javatxt">Java</string>
    <string name="act_preferencias_btn_siguiente">Siguiente</string>
    <string name="iniciar_sesion">Login</string>
    <string name="pregunta">Pregunta</string>
    <string name="ejemplo_fecha_pregunta">Ayer, 19:30</string>
    <string name="ejemplo_respuestas">8 respuestas</string>
    <string name="nombre_perfil">esteban_dido</string>
    <string name="nombre_datos_perfil">Esteban Dido</string>
    <string name="descripcion_perfil">Soy un amante de los problemas. Problema que veo, problema que me como. Fanatico de la programación.</string>
    <string name="act_perfil_btn_preguntas">Preguntas</string>
    <string name="act_perfil_btn_respuestas">Respuestas</string>
    <string name="act_perfil_btn_favoritos" />
    <string name="tu_nombre">Tu nombre de usuario</string>
    <string name="nuevo_nombre">Nuevo nombre</string>
    <string name="confirma_pass">Confirma la contraseña</string>
    <string name="nueva_pass">Contraseña nueva</string>
    <string name="act_descripcion_txtDescripcion">Cuéntanos de forma breve a qué te dedicas</string>
    <string name="frg_descripcion_hint_descripcion">Sé creativo...</string>
    <string name="act_descripcion_btn_finalizar">¡Finalizar!</string>
</resources>