<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/act_login_sup_layout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/supbar"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageButton
            android:id="@+id/act_login_imgBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@null"
            android:paddingStart="8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/frg_recupera_pass_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:gravity="center"
            android:text="@string/recupera_pass_title"
            android:textAlignment="center"
            tools:text="@string/recupera_pass" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textInfo_recupera_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="24dp"
            android:text="@string/subtitle_recupera_passw"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="44sp"
            tools:text="@string/subtitle_recupera_passw" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:text="@string/info2_recupera_pass"
            android:textAlignment="center"
            android:textColor="@color/black2"
            android:textSize="22sp"
            tools:text="@string/info2_recupera_pass" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_pass_recupera_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/introducir_email"
            android:ems="24"
            android:hint="@string/email_placeHolder"
            android:inputType="textEmailAddress"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/frg_recupera_pass_btn_enviar"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_enviar_recupera_pass"
            android:text="@string/btn_enviar"
            android:textSize="20sp" />



    </LinearLayout>

</FrameLayout>