<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".perfil.ConfigFragment">

    <LinearLayout
        android:id="@+id/frg_config_title_lin"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@drawable/supbar"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/frg_config_back_btn"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@null"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/frg_config_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/config"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_config_title_lin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frg_config_cuenta_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/cuenta"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_usuario" />

            <Button
                android:id="@+id/frg_config_nombre_btn"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@null"
                android:padding="8dp"
                android:text="@string/nombre_usuario"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/frg_config_pass_btn"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@null"
                android:padding="8dp"
                android:text="@string/pass"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/frg_config_email_btn"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@null"
                android:padding="8dp"
                android:text="@string/email"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/frg_config_privacidad_btn"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@null"
                android:padding="8dp"
                android:text="@string/privacidad"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/frg_config_foto_btn"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@null"
                android:padding="8dp"
                android:text="@string/foto_perfil"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Button
                android:id="@+id/frg_config_logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@null"
                android:gravity="start|center_vertical"
                android:padding="8dp"
                android:text="@string/cerrar_sesion"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/config_main_lin_notif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:weightSum="30">

                <TextView
                    android:id="@+id/frg_config_notif_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_vertical"
                    android:text="@string/notificaciones"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_notificacion" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/frg_config_notificaciones_switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:showText="false"
                    android:thumbTint="@color/white"
                    android:track="@drawable/btn_comenzar"
                    android:trackTint="@color/black"
                    tools:checked="false" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


