<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntaDetalleActivity">

    <LinearLayout
        android:id="@+id/act_pregunta_detalle_title_lin"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@drawable/supbar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/detalle_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@null"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/pregunta_detalle_title_txt"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="90"
            android:gravity="center"
            android:text="@string/detalle_pregunta" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/act_detalle_pregunta_lin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/act_detalle_respuestas_lin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_pregunta_detalle_title_lin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/user_pregunta_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/user"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/pregunta_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ejemplo_detalle"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pregunta_detalle_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ejemplo_txt"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_categoria"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_round"
            android:padding="8dp"
            android:text="@string/lenguaje_c"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/act_detalle_respuestas_lin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_detalle_pregunta_lin">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/respuestas"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ejemplo_txt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejemplo_votos"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>