<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mensajes_lista_adapter_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/mensajes_lista_adapter_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/user"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mensajes_lista_adapter_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:text="@string/ejemplo_hora"
        style="@style/tipografiaHora"
        app:layout_constraintBottom_toTopOf="@+id/mensajes_lista_adapter_mensaje_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mensajes_lista_adapter_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/mensajes_lista_adapter_mensaje_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="48dp"
        android:duplicateParentState="false"
        android:text="@string/ejemplo_txt"
        android:textColor="@color/gris"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toEndOf="@+id/mensajes_lista_adapter_user_image"
        app:layout_constraintTop_toBottomOf="@+id/mensajes_lista_adapter_user" />

    <ImageView
        android:id="@+id/mensajes_lista_adapter_user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensajes_lista_adapter_user"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/programador" />

</androidx.constraintlayout.widget.ConstraintLayout>